feat: CI pipeline, error handling, config validation, webhook auth, Dockerfile hardening
- Add GitHub Actions CI (.github/workflows/ci.yml): ruff check, format, pytest
- Add error handling in handle_webhook: try/except, None guards, JSON responses (401/400/404/500)
- Add Config.validate() for fail-fast on missing required env vars
- Add Blockfrost webhook HMAC-SHA256 signature verification (bot/webhook_auth.py)
- Harden Dockerfile: pin uv 0.9, non-root user, EXPOSE 8080
- Add .dockerignore, .env.example
- Add tests for config validation and webhook auth (45 total)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,13 @@
 .git/
+.github/
 .venv/
-.vscode/
-.DS_Store
-.flake8
+__pycache__/
+tests/
+drafts/
+docs/
+*.md
+*.pyc
+.env
+.env.example
 .gitignore
 .dockerignore
-docs/
-drafts/
-AGENTS.md
-README.md
-LICENSE
-pyproject.toml
-__pycache__/
-*.pyc
