--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ ACCESS_TOKEN_SECRET=
 # Cardano DB-Sync PostgreSQL connection string
 DB_SYNC_URL=postgresql://user:pass@host:5432/cexplorer
 
-# Blockfrost webhook secret (for signature verification)
-BLOCKFROST_WEBHOOK_SECRET=
+# Blockfrost webhook auth token (for signature verification)
+BLOCKFROST_WEBHOOK_AUTH_TOKEN=
 
 # Feature flags
 TWEET_POSTING_ENABLED=false
