--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "psycopg2-binary>=2.9,<3",
     "requests>=2.32,<3",
     "tenacity>=9,<10",
+    "python-dotenv>=1.2.1",
 ]
 
 [dependency-groups]
