feat: auto-archive rationales via GitHub PRs
- Add bot/rationale_archiver.py (branch + commit + PR via PyGithub)
- Integrate archive calls in main.py after tweet posting
- Add GITHUB_TOKEN and GITHUB_REPO to config
- Add PyGithub and python-dotenv to dependencies
- Gracefully skip if GITHUB_TOKEN not set

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ BLOCKFROST_WEBHOOK_AUTH_TOKEN=
 
 # Feature flags
 TWEET_POSTING_ENABLED=false
+
+# GitHub integration (for rationale archiving)
+GITHUB_TOKEN=
+GITHUB_REPO=semsorock/cardano-gov-actions-bot
