--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "requests>=2.32,<3",
     "tenacity>=9,<10",
     "python-dotenv>=1.2.1",
+    "pygithub>=2,<3",
 ]
 
 [dependency-groups]
