--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,14 @@ BLOCKFROST_WEBHOOK_AUTH_TOKEN=
 
 # Feature flags
 TWEET_POSTING_ENABLED=false
+X_WEBHOOK_ENABLED=false
+
+# LLM triage (used when X_WEBHOOK_ENABLED=true)
+LLM_MODEL=
+LLM_ISSUE_CONFIDENCE_THRESHOLD=0.80
+
+# X webhook provisioning helper script
+X_WEBHOOK_CALLBACK_URL=https://YOUR_SERVICE_URL/x/webhook
 
 # GitHub integration (for rationale archiving)
 GITHUB_TOKEN=
