--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ X_WEBHOOK_CALLBACK_URL=https://YOUR_SERVICE_URL/x/webhook
 # GitHub integration (for rationale archiving)
 GITHUB_TOKEN=
 GITHUB_REPO=semsorock/cardano-gov-actions-bot
+
+# Firestore integration (for persistent runtime state)
+# Leave FIRESTORE_PROJECT_ID empty to use Application Default Credentials project.
+FIRESTORE_PROJECT_ID=
+FIRESTORE_DATABASE=(default)
