Diagnose missing X webhook posts

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ API_KEY=
 API_SECRET_KEY=
 ACCESS_TOKEN=
 ACCESS_TOKEN_SECRET=
+BEARER_TOKEN=
 
 # Cardano DB-Sync PostgreSQL connection string
 DB_SYNC_URL=postgresql://user:pass@host:5432/cexplorer
